[gd_scene load_steps=3 format=3 uid="uid://rt01ns61scat"]

[ext_resource type="Script" uid="uid://ccrraudexr06p" path="res://scenes/stages/Stage1.gd" id="1_oping"]
[ext_resource type="Texture2D" uid="uid://bkqc78as5t0l8" path="res://icon.svg" id="1_usxtq"]

[node name="Stage1" type="Node2D"]
script = ExtResource("1_oping")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101960786, 0, 0.2, 1)

[node name="BattleLayer" type="CanvasLayer" parent="."]

[node name="EnemySprite" type="Sprite2D" parent="BattleLayer"]
modulate = Color(0.9490196, 0.16470589, 0.16470589, 1)
position = Vector2(640, 200)
scale = Vector2(2, 2)
texture = ExtResource("1_usxtq")

[node name="PlayerSprite" type="Sprite2D" parent="BattleLayer"]
modulate = Color(0.49803922, 0.49803922, 1, 1)
position = Vector2(640, 500)
texture = ExtResource("1_usxtq")

[node name="EnemyHealthBar" type="ProgressBar" parent="BattleLayer"]
offset_left = 400.0
offset_top = 30.0
offset_right = 404.0
offset_bottom = 57.0
value = 100.0

[node name="GameplayLayer" type="CanvasLayer" parent="."]

[node name="NoteSpawner" type="Node2D" parent="GameplayLayer"]

[node name="HitZone" type="Control" parent="GameplayLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HitLine" type="ColorRect" parent="GameplayLayer/HitZone"]
layout_mode = 0
offset_left = 140.0
offset_top = 650.0
offset_right = 1140.0
offset_bottom = 655.0
color = Color(1, 0.84313726, 0, 1)

[node name="LaneMarker" type="Control" parent="GameplayLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lane1" type="ColorRect" parent="GameplayLayer/LaneMarker"]
layout_mode = 0
offset_left = 300.0
offset_top = 100.0
offset_right = 305.0
offset_bottom = 700.0
color = Color(1, 1, 1, 0.3019608)

[node name="Lane2" type="ColorRect" parent="GameplayLayer/LaneMarker"]
layout_mode = 0
offset_left = 450.0
offset_top = 100.0
offset_right = 455.0
offset_bottom = 700.0
color = Color(1, 1, 1, 0.3019608)

[node name="Lane3" type="ColorRect" parent="GameplayLayer/LaneMarker"]
layout_mode = 0
offset_left = 600.0
offset_top = 100.0
offset_right = 605.0
offset_bottom = 700.0
color = Color(1, 1, 1, 0.3019608)

[node name="Lane4" type="ColorRect" parent="GameplayLayer/LaneMarker"]
layout_mode = 0
offset_left = 750.0
offset_top = 100.0
offset_right = 755.0
offset_bottom = 700.0
color = Color(1, 1, 1, 0.3019608)

[node name="Lane5" type="ColorRect" parent="GameplayLayer/LaneMarker"]
layout_mode = 0
offset_left = 900.0
offset_top = 100.0
offset_right = 905.0
offset_bottom = 700.0
color = Color(1, 1, 1, 0.3019608)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="TopUI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UILayer/TopUI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "0"

[node name="ComboLabel" type="Label" parent="UILayer/TopUI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "0"

[node name="Accuracy Label" type="Label" parent="UILayer/TopUI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24

[node name="JudgementLabel" type="Label" parent="UILayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="RhythmController" type="Node" parent="."]
